Reduce api scope
