# backend/src/main/resources/static/openapi.yaml
@@ -5,19 +5,6 @@ info:
   version: 0.1.9
 paths:
   /products:
-    get:
-      summary: Returns a list of products
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProductList'
-        404:
-          description: No products found
-        default:
-          description: Unexpected error
     post:
       summary: Creates a new product
       requestBody:
@@ -33,20 +20,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Product'
-        default:
-          description: Unexpected error
-  /products/new:
-    get:
-      summary: Returns a list new products
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProductList'
-        404:
-          description: No products found
         default:
           description: Unexpected error
   /products/{productId}:
